# mp3cd-burner

./: .gitignore  BUNDLE_FORMAT_PLAN.md  CLAUDE.md  Cargo.toml  GPUI_NOTES.md  LICENSE  MIGRATION_PLAN.md  README.md  new.txt  tarpaulin.toml
.github/: FUNDING.yml
macos/: AppIcon.icns  DocIcon.icns  Info.plist
scripts/: bundle-macos.sh
src/: actions.rs  logging.rs  main.rs  test_fixtures.rs
src/audio/: conversion.rs  detection.rs  metadata.rs  metadata_writer.rs  mod.rs
src/burning/: cd.rs  coordinator.rs  iso.rs  iso_manager.rs  iso_state.rs  mod.rs  workflow.rs
src/conversion/: background.rs  ffmpeg.rs  mod.rs  optimizer.rs  output_manager.rs  parallel.rs  simple_encoder.rs
src/core/: bitrate.rs  folder_state.rs  mod.rs  scanning.rs  state.rs
src/profiles/: manager.rs  mod.rs  storage.rs  types.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: about.rs  bitrate_override.rs  burn_progress.rs  display_settings.rs  folder_item.rs  folder_list.rs  header.rs  mod.rs  status_bar.rs  track_editor.rs  volume_label.rs
src/ui/components/folder_list/: conversion.rs  encoder.rs  folders.rs  iso.rs  mod.rs  profiles.rs  render.rs  tests.rs
