[package]
name = "mp3cd-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
