[package]
name = "mp3cd-gpui"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "MP3-CD-Burner"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
walkdir = "2.5"
tokio = { version = "1", features = ["sync", "process", "rt-multi-thread", "macros"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
simplelog = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
